tests/automatic_require_default/automatic_require_default.exp
Error -------------------------------------------------------------------------------------------------- imports.js:9:14

Cannot get `Default.T` because property `T` is missing in `Number` [1]. [prop-missing]

   imports.js:9:14
     9| (1 : Default.T); // error T missing in number
                     ^

References:
   <BUILTINS>/core.js:376:15
   376| declare class Number {
                      ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- react.js:8:13

Cannot get `React.NotAType` because property `NotAType` is missing in module `react` [1]. [prop-missing]

   react.js:8:13
     8| ("" : React.NotAType); // error NotAType missing in React
                    ^^^^^^^^

References:
   <BUILTINS>/react.js:458:27
   458|   declare module.exports: $Exports<'react'>;
                                  ^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- react.js:9:13

Cannot get `react.NotAType` because property `NotAType` is missing in module `react` [1]. [prop-missing]

   react.js:9:13
   9| ("" : react.NotAType); // error NotAType missing in react
                  ^^^^^^^^

References:
   react.js:2:15
   2| const react = require('react');
                    ^^^^^^^^^^^^^^^^ [1]



Found 3 errors
